<resources>
    <string name="app_name">Beatster</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="email_hint">Email</string>
    <string name="helper_text_required">Required*</string>
    <string name="password_hint">Password</string>
    <string name="last_name_register_hint">Last Name</string>
    <string name="first_name_register_hint">First Name</string>
    <string name="prefix_hint">Prefix</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="allowed_password_special_chars">!_?#$%</string>
    <string name="camera_option_text">Camera</string>
    <string name="gallery_option_text">Gallery</string>
    <string name="internet_status_displayer">internet status displayer</string>
    <string name="connection_status">Connection status:</string>
    <string name="search_button_text">Search</string>
    <string name="play_button_text">PLAY</string>
    <string name="edit_info_button_text">Edit info</string>
    <string name="search_button_description">search button</string>
    <string name="tracks_label_text">Tracks</string>
    <string name="sample_title_text">Sample title</string>
    <string name="sample_artist_text">Sample artist</string>
    <string name="play_button_description">play button</string>
    <string name="start_song_time">0:00</string>
    <string name="end_song_time">0:30</string>
    <string name="default_song">Rap God</string>
    <string name="default_artist">Eminem</string>
    <string name="sample_now_playing">Now Playing</string>
    <string name="edit_info_save_text">Save</string>
    <string name="back_button">Back</string>
    <string name="helper_password_text">min 6 chars, one upper and lower case, one digit, one symbol</string>
    <string name="helper_more_than_2_letters">More than 2 letters *</string>
    <string name="empty"> </string>
    <string name="blankspace">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="no_internet_connection_banner_text">No internet connection</string>
</resources>