<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tracks_container"
    android:layout_margin="@dimen/margin_5"
    android:orientation="horizontal"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/circle_image_size_search"
        android:layout_height="@dimen/circle_image_size_search"
        android:id="@+id/track_image"
        android:src="@color/black"
        android:layout_margin="@dimen/margin_5"
        android:layout_centerVertical="true"
        />

    <LinearLayout
        android:id="@+id/track_title_artist"
        android:layout_width="match_parent"
        android:layout_marginEnd="@dimen/margin_50"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/track_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_title_text" />

        <TextView
            android:id="@+id/text_view_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_artist_text" />
    </LinearLayout>
    <soup.neumorphism.NeumorphImageView
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/play_button_description"
        android:src="@drawable/ic_baseline_play_arrow_24"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:padding="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:neumorph_shadowColorDark="@color/dark_shadow"
        app:neumorph_shadowColorLight="@color/light_shadow"
        app:neumorph_shapeAppearance="@style/NeumorphismImageOther"
        android:tint="@color/secondary_text"/>

</RelativeLayout>