<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="horizontal">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.login.RegisterFragment"
        android:fitsSystemWindows = "true"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/circle_image_size_register"
            android:layout_height="@dimen/circle_image_size_register"
            android:src="@drawable/ic_baseline_add_24"
            app:civ_border_color="@color/variant"
            app:civ_border_width="@dimen/circle_image_border"
            android:layout_margin="@dimen/margin_20"
            android:id="@+id/profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <LinearLayout
            android:id="@+id/linear_layout_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_register_hint"
                app:helperText="More than 2 letters *"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="@dimen/editTextMaxHeight" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:hint="@string/last_name_register_hint"
                app:helperText="More than 2 letters *">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="@dimen/editTextMaxHeight" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout_name"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_name"
            android:layout_marginTop="@dimen/margin_50"
            android:layout_marginStart="@dimen/margin_50"
            android:layout_marginEnd="@dimen/margin_50"
            android:id="@+id/linear_layout_phone"
            >

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/country_picker_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/phone_number_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:hint="@string/phone_number_hint"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/ccp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="@dimen/editTextMaxHeight" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_50"
            android:layout_marginEnd="@dimen/margin_50"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_input_layout_email"
            android:hint="@string/email_hint"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_phone"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxHeight="@dimen/editTextMaxHeight"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_email"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_50"
            android:layout_marginEnd="@dimen/margin_50"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_input_layout_password"
            android:hint="@string/password_hint"
            app:helperText="min 6 chars, one upper and lower case, one digit, one symbol"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_email"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxHeight="@dimen/editTextMaxHeight"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_password"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_50"
            android:layout_marginEnd="@dimen/margin_50"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_input_layout_confirm_password"
            android:hint="@string/confirm_password_hint"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxHeight="@dimen/editTextMaxHeight"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_confirm_password"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginEnd="@dimen/margin_50"
            android:text="@string/register_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_confirm_password"
            />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/margin_30"
            android:text="@string/cancel_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_confirm_password"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
    </HorizontalScrollView>
</layout>