<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="horizontal">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:id="@+id/search_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/margin_10">

                    <soup.neumorphism.NeumorphImageView
                        android:id="@+id/search_button"
                        android:layout_width="@dimen/_48sdp"
                        android:layout_height="@dimen/_48sdp"
                        android:backgroundTint="@color/white"
                        android:contentDescription="@string/search_button_description"
                        android:padding="@dimen/_16sdp"
                        android:src="@drawable/ic_search"
                        android:tint="@color/secondary_text"
                        app:neumorph_shadowColorDark="@color/dark_shadow"
                        app:neumorph_shadowColorLight="@color/light_shadow"
                        app:neumorph_shapeAppearance="@style/NeumorphismImageOther" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_input_search"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/tracks_label_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/search_layout"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:text="@string/tracks_label_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_25" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/tracks_label_text"
                    android:layout_marginStart="@dimen/margin_5"
                    android:layout_marginTop="@dimen/margin_5"
                    android:layout_marginEnd="@dimen/margin_5"
                    android:layout_marginBottom="@dimen/margin_5">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerview_tracks"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/no_internet_banner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:text="@string/no_internet_connection_banner_text"
                        android:textAlignment="center"
                        android:visibility="invisible" />

                </FrameLayout>

            </RelativeLayout>
        </ScrollView>
    </HorizontalScrollView>
</layout>