<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="horizontal">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_36sdp"
        app:constraint_referenced_ids="imageShuffle,imagePrevious,imagePlayPause,imageNext,imageLoop"
        app:flow_maxElementsWrap="5"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <soup.neumorphism.NeumorphImageView
        android:id="@+id/imageShuffle"
        android:layout_width="@dimen/_42sdp"
        android:layout_height="@dimen/_42sdp"
        android:padding="@dimen/_14sdp"
        android:src="@drawable/ic_shuffle"
        app:neumorph_shadowColorDark="@color/dark_shadow"
        app:neumorph_shadowColorLight="@color/light_shadow"
        app:neumorph_shapeAppearance="@style/NeumorphismImageSmall"
        android:tint="@color/primary"/>
    <soup.neumorphism.NeumorphImageView
        android:id="@+id/imagePrevious"
        android:layout_width="@dimen/_54sdp"
        android:layout_height="@dimen/_54sdp"
        android:padding="@dimen/_20sdp"
        android:src="@drawable/ic_previous"
        app:neumorph_shadowColorDark="@color/dark_shadow"
        app:neumorph_shadowColorLight="@color/light_shadow"
        app:neumorph_shapeAppearance="@style/NeumorphismImageNormal"
        android:tint="@color/primary"
        tools:ignore="MissingConstraints" />
    <soup.neumorphism.NeumorphImageView
        android:id="@+id/imagePlayPause"
        android:layout_width="@dimen/_64sdp"
        android:layout_height="@dimen/_64sdp"
        android:padding="@dimen/_16sdp"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:neumorph_shadowColorDark="@color/dark_shadow"
        app:neumorph_shadowColorLight="@color/light_shadow"
        app:neumorph_shapeAppearance="@style/NeumorphismImageLarge"
        app:neumorph_shapeType="basin"
        android:tint="@color/black"
        tools:ignore="MissingConstraints" />
    <soup.neumorphism.NeumorphImageView
        android:id="@+id/imageNext"
        android:layout_width="@dimen/_54sdp"
        android:layout_height="@dimen/_54sdp"
        android:padding="@dimen/_20sdp"
        android:src="@drawable/ic_next"
        app:neumorph_shadowColorDark="@color/dark_shadow"
        app:neumorph_shadowColorLight="@color/light_shadow"
        app:neumorph_shapeAppearance="@style/NeumorphismImageNormal"
        android:tint="@color/primary"
        tools:ignore="MissingConstraints" />
    <soup.neumorphism.NeumorphImageView
        android:id="@+id/imageLoop"
        android:layout_width="@dimen/_42sdp"
        android:layout_height="@dimen/_42sdp"
        android:padding="@dimen/_14sdp"
        android:src="@drawable/ic_loop"
        app:neumorph_shadowColorDark="@color/dark_shadow"
        app:neumorph_shadowColorLight="@color/light_shadow"
        app:neumorph_shapeAppearance="@style/NeumorphismImageSmall"
        android:tint="@color/primary"
        tools:ignore="MissingConstraints" />
    <soup.neumorphism.NeumorphCardView
        android:id="@+id/cardSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@id/imagePlayPause"
        app:neumorph_shadowColorDark="@color/dark_shadow"
        app:neumorph_shadowColorLight="@color/light_shadow">
        <SeekBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_6sdp"
            android:layout_margin="@dimen/_2sdp"
            android:paddingStart="@dimen/padding_0"
            android:paddingEnd="@dimen/padding_0"
            android:progress="90"
            android:progressDrawable="@drawable/progress_background"
            android:splitTrack="false"
            android:thumbTint="@android:color/transparent"/>

    </soup.neumorphism.NeumorphCardView>
    <TextView
        android:id="@+id/textRemain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/start_song_time"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@id/cardSeekBar"
        app:layout_constraintStart_toStartOf="@id/cardSeekBar"/>
    <TextView
        android:id="@+id/textDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/end_song_time"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@id/cardSeekBar"
        app:layout_constraintEnd_toEndOf="@id/cardSeekBar"/>
    <TextView
        android:id="@+id/textArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/default_artist"
        android:textColor="@color/primary"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toTopOf="@+id/textRemain"/>
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_2sdp"
        android:gravity="center"
        android:text="@string/default_song"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintBottom_toTopOf="@+id/textArtist"/>
    <soup.neumorphism.NeumorphImageView
        android:id="@+id/profileMenu"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:padding="@dimen/_16sdp"
        android:src="@drawable/ic_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:neumorph_shadowColorDark="@color/dark_shadow"
        app:neumorph_shadowColorLight="@color/light_shadow"
        app:neumorph_shapeAppearance="@style/NeumorphismImageOther"
        android:tint="@color/secondary_text"/>
    <soup.neumorphism.NeumorphImageView
        android:id="@+id/imageSearch"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:padding="@dimen/_16sdp"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:neumorph_shadowColorDark="@color/dark_shadow"
        app:neumorph_shadowColorLight="@color/light_shadow"
        app:neumorph_shapeAppearance="@style/NeumorphismImageOther"
        android:tint="@color/secondary_text"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sample_now_playing"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/profileMenu"
        app:layout_constraintEnd_toStartOf="@id/imageSearch"
        app:layout_constraintStart_toEndOf="@+id/profileMenu"
        app:layout_constraintTop_toTopOf="@+id/profileMenu"/>
    <soup.neumorphism.NeumorphCardView
        android:id="@+id/ImageSong"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_230sdp"
        app:layout_constraintBottom_toTopOf="@id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileMenu"
        app:neumorph_shadowColorDark="@color/dark_shadow"
        app:neumorph_shadowColorLight="@color/light_shadow"
        app:neumorph_shapeAppearance="@style/NeumorphismCardImage">
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/track_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_2sdp"
            android:src="@drawable/eminem"
            app:riv_oval="true">

        </com.makeramen.roundedimageview.RoundedImageView>
    </soup.neumorphism.NeumorphCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </HorizontalScrollView>
</layout>